--- a/e2e/__snapshots__/e2e/uni-app-tailwindcss-v4/app.wxss
+++ b/e2e/__snapshots__/e2e/uni-app-tailwindcss-v4/app.wxss
@@ -1,4 +1,4 @@
-/*! tailwindcss v4.1.14 | MIT License | https://tailwindcss.com */
+/*! tailwindcss v4.1.15 | MIT License | https://tailwindcss.com */
 view,
 text,
 :before,
@@ -29,9 +29,7 @@ text,
 .i-mdi-home {
   width: 1em;
   height: 1em;
-  -webkit-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='24' height='24'%3E%3Cpath fill='black' d='M10 20v-6h4v6h5v-8h3L12 3L2 12h3v8z'/%3E%3C/svg%3E");
   -webkit-mask-image: var(--svg);
-  mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='24' height='24'%3E%3Cpath fill='black' d='M10 20v-6h4v6h5v-8h3L12 3L2 12h3v8z'/%3E%3C/svg%3E");
   mask-image: var(--svg);
   --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='24' height='24'%3E%3Cpath fill='black' d='M10 20v-6h4v6h5v-8h3L12 3L2 12h3v8z'/%3E%3C/svg%3E");
   background-color: currentColor;
@@ -51,10 +49,10 @@ text,
   aspect-ratio: 13/3;
 }
 .h-20 {
-  height: 160rpx;
+  height: calc(var(--spacing) * 20);
 }
 .w-20 {
-  width: 160rpx;
+  width: calc(var(--spacing) * 20);
 }
 .flex-col {
   flex-direction: column;
@@ -63,37 +61,31 @@ text,
   background-color: #00f;
 }
 .bg-midnight {
-  background-color: #121063;
   background-color: var(--color-midnight);
 }
 .bg-neutral-1B {
-  background-color: #1b1b1b;
   background-color: var(--color-neutral-1B);
 }
 .fill-bermuda {
-  fill: #78dcca;
   fill: var(--color-bermuda);
-}
-.text-_45rpx_ {
-  font-size: 45rpx;
-}
-.text-_88rpx_ {
-  font-size: 88rpx;
 }
 .font-bold {
   --tw-font-weight: var(--font-weight-bold);
-  font-weight: 700;
   font-weight: var(--font-weight-bold);
 }
 .text-_h00f285_ {
   color: #00f285;
 }
+.text-_45rpx_ {
+  color: 45rpx;
+}
+.text-_88rpx_ {
+  color: 88rpx;
+}
 .text-tahiti {
-  color: #3ab7bf;
   color: var(--color-tahiti);
 }
 .text-white {
-  color: #fff;
   color: var(--color-white);
 }
 .underline {
