--- a/e2e/__snapshots__/e2e/uni-app-webpack-tailwindcss-v4/main.wxss
+++ b/e2e/__snapshots__/e2e/uni-app-webpack-tailwindcss-v4/main.wxss
@@ -1,4 +1,4 @@
-/*! tailwindcss v4.1.14 | MIT License | https://tailwindcss.com */
+/*! tailwindcss v4.1.15 | MIT License | https://tailwindcss.com */
 :host,
 page {
   --spacing: 8rpx;
@@ -24,7 +24,7 @@ page {
   display: flex;
 }
 .h-21 {
-  height: 168rpx;
+  height: calc(var(--spacing) * 21);
 }
 .bg-_h123456_ {
   background-color: #123456;
