--- a/e2e/__snapshots__/e2e/taro-webpack-tailwindcss-v4/page.wxml
+++ b/e2e/__snapshots__/e2e/taro-webpack-tailwindcss-v4/page.wxml
@@ -1,27 +1,3 @@
-<view class="bg-_h534312_ text-_hfff_ text-_100rpx_" style=""><text space="" style=""></text></view>
-<view class="bg-purple-800 text-pink-200" style="">11</view>
-<view class="h-14 bg-gradient-to-r from-cyan-500 to-blue-500" style=""></view>
-<button
-  app-parameter=""
-  business-id=""
-  class="nut-button nut-button-default nut-button-normal nut-button-round nut-button-round-normal"
-  form-type=""
-  hover-class="button-hover"
-  hover-start-time="20"
-  hover-stay-time="70"
-  lang=""
-  open-type=""
-  send-message-img=""
-  send-message-path=""
-  send-message-title=""
-  session-from=""
-  size="default"
-  style=""
-  type=""
-  role="button"
-  aria-disabled="false">
-  <view class="nut-button-wrap" style=""><view class="nut-button-children nut-button-normal-children nut-button-default-children" style="">Share</view></view>
-</button>
 .luna-dom-highlighter{position:fixed;left:0;top:0;width:100%;height:100%;z-index:100000;pointer-events:none;font-size:13px}.luna-dom-highlighter-fill{position:absolute;top:0;right:0;bottom:0;left:0}.luna-dom-highlighter-platform-linux{font-family:Roboto,Ubuntu,Arial,sans-serif}.luna-dom-highlighter-platform-mac{color:#303942;font-family:'.SFNSDisplay-Regular','Helvetica
 Neue','Lucida Grande',sans-serif}.luna-dom-highlighter-platform-windows{font-family:'Segoe
 UI',Tahoma,sans-serif}.luna-dom-highlighter-px{color:gray}#luna-dom-highlighter-element-title{position:absolute;z-index:10}.luna-dom-highlighter-tooltip-content{position:absolute;-webkit-user-select:none;-moz-user-select:none;user-select:none;background-color:#fff;padding:5px
@@ -38,3 +14,9 @@ solid
 solid #000;padding:0
 1px}.luna-dom-highlighter-a11y-icon-not-ok{background-image:url('data:image/svg+xml,')}.luna-dom-highlighter-a11y-icon-warning{background-image:url('data:image/svg+xml,')}.luna-dom-highlighter-a11y-icon-ok{background-image:url('data:image/svg+xml,')}@media
 (forced-colors:active){:root,body{background-color:transparent;forced-color-adjust:none}.luna-dom-highlighter-tooltip-content{border-color:Highlight;background-color:canvas;color:text;forced-color-adjust:none}.luna-dom-highlighter-tooltip-content::after{background-color:Highlight}.luna-dom-highlighter-color-swatch-inner,.luna-dom-highlighter-contrast-text,.luna-dom-highlighter-separator{border-color:Highlight}.luna-dom-highlighter-section-name{color:Highlight}.luna-dom-highlighter-dimensions,.luna-dom-highlighter-element-info-name,.luna-dom-highlighter-element-info-value-color,.luna-dom-highlighter-element-info-value-contrast,.luna-dom-highlighter-element-info-value-icon,.luna-dom-highlighter-element-info-value-text,.luna-dom-highlighter-material-class-name,.luna-dom-highlighter-material-node-id,.luna-dom-highlighter-material-tag-name{color:canvastext}}.luna-dom-highlighter{z-index:2147483647;}
+<view class="bg- 534312 text- fff text- 100rpx" style=""><text space="" style=""></text></view>
+<view class="bg-purple-800 text-pink-200" style="">11</view>
+<view class="h-14 bg-gradient-to-r from-cyan-500 to-blue-500" style=""></view>
+<view class="nut-button nut-button-default nut-button-normal nut-button-round nut-button-round-normal" style="">
+  <view class="nut-button-wrap" style=""><view class="nut-button-children nut-button-normal-children nut-button-default-children" style="">Share</view></view>
+</view>
