--- a/e2e/__snapshots__/e2e/uni-app-tailwindcss-v4/app.wxss
+++ b/e2e/__snapshots__/e2e/uni-app-tailwindcss-v4/app.wxss
@@ -1,4 +1,4 @@
-/*! tailwindcss v4.1.15 | MIT License | https://tailwindcss.com */
+/*! tailwindcss v4.1.16 | MIT License | https://tailwindcss.com */
 view,
 text,
 :before,
@@ -29,7 +29,9 @@ text,
 .i-mdi-home {
   width: 1em;
   height: 1em;
+  -webkit-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='24' height='24'%3E%3Cpath fill='black' d='M10 20v-6h4v6h5v-8h3L12 3L2 12h3v8z'/%3E%3C/svg%3E");
   -webkit-mask-image: var(--svg);
+  mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='24' height='24'%3E%3Cpath fill='black' d='M10 20v-6h4v6h5v-8h3L12 3L2 12h3v8z'/%3E%3C/svg%3E");
   mask-image: var(--svg);
   --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='24' height='24'%3E%3Cpath fill='black' d='M10 20v-6h4v6h5v-8h3L12 3L2 12h3v8z'/%3E%3C/svg%3E");
   background-color: currentColor;
@@ -49,10 +51,10 @@ text,
   aspect-ratio: 13/3;
 }
 .h-20 {
-  height: calc(var(--spacing) * 20);
+  height: 160rpx;
 }
 .w-20 {
-  width: calc(var(--spacing) * 20);
+  width: 160rpx;
 }
 .flex-col {
   flex-direction: column;
@@ -61,16 +63,20 @@ text,
   background-color: #00f;
 }
 .bg-midnight {
+  background-color: #121063;
   background-color: var(--color-midnight);
 }
 .bg-neutral-1B {
+  background-color: #1b1b1b;
   background-color: var(--color-neutral-1B);
 }
 .fill-bermuda {
+  fill: #78dcca;
   fill: var(--color-bermuda);
 }
 .font-bold {
   --tw-font-weight: var(--font-weight-bold);
+  font-weight: 700;
   font-weight: var(--font-weight-bold);
 }
 .text-_h00f285_ {
@@ -83,9 +89,11 @@ text,
   color: 88rpx;
 }
 .text-tahiti {
+  color: #3ab7bf;
   color: var(--color-tahiti);
 }
 .text-white {
+  color: #fff;
   color: var(--color-white);
 }
 .underline {
