--- a/e2e/__snapshots__/e2e/taro-vite-tailwindcss-v4/page.wxml
+++ b/e2e/__snapshots__/e2e/taro-vite-tailwindcss-v4/page.wxml
@@ -1,4 +1,4 @@
 <view class="index" style="">
-  <text class="text- 55rpx text- fff bg-purple-300" space="" style=""></text>
+  <text class="text-_55rpx_ text-_hfff_ bg-purple-300" space="" style=""></text>
   <view class="h-14 bg-gradient-to-r from-cyan-500 to-blue-500" style=""></view>
 </view>
